ui-gui: malformed query fixed